--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,9 @@
       <td>{{ listing.Quantity or listing.quantity }}</td>
       <td>
         {% if mercari_linked %}
-        <button class="action-btn" onclick='sendToExtension({{ listing | tojson | safe }})'>Post via Extension</button>
+        <button class="action-btn" onclick='sendToExtension({{ listing | tojson | safe }})' type="button">
+          Post via Extension
+        </button>
         {% else %}
         <form method="POST" action="/linked-accounts">
           <button type="submit" class="action-btn">Log Into Mercari</button>
