--- a/templates/index.html
+++ b/templates/index.html
@@ -99,10 +99,10 @@
           {% endif %}
         </div>
       </td>
-      <td>{{ listing.Title or listing.title }}</td>
-      <td>{{ listing.Price or listing.price }}</td>
-      <td>{{ listing.Condition or listing.condition }}</td>
-      <td>{{ listing.Quantity or listing.quantity }}</td>
+      <td>{{ listing.title }}</td>
+      <td>{{ listing.price }}</td>
+      <td>{{ listing.condition }}</td>
+      <td>{{ listing.quantity }}</td>
     </tr>
     {% endfor %}
   </tbody>
